SR-12583: Added checks to catch 'foo() {} {}' and 'foo {} () {}'